--- a/themes/zen/layout/partial/footer.ejs
+++ b/themes/zen/layout/partial/footer.ejs
@@ -20,3 +20,7 @@
         Powered by <a href="https://hexo.io/">Hexo</a>
     </span>
 </footer>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8TV3D3P"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
