--- a/themes/zen/layout/partial/head.ejs
+++ b/themes/zen/layout/partial/head.ejs
@@ -3,12 +3,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5">
     <meta name="description" content="<%= config.description %>">
     <link rel="shortcut icon" href="<%= url_for(theme.favicon) %>" type="image/x-icon" />
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-M8TV3D3P');</script>
+    <!-- End Google Tag Manager -->
     <title>
         <% if (page.title) { %>
             <%= page.title %> |
-        <% } %>
-        <%= config.title %>
+                <% } %>
+                    <%= config.title %>
     </title>
     <%- css('css/style') %>
-    <%- css('css/partial/atom-one-dark.min') %>
+        <%- css('css/partial/atom-one-dark.min') %>
 </head>
